fix(kanban): #610 collapse swimlane space

--- a/app/styles/modules/kanban/kanban-table.scss
+++ b/app/styles/modules/kanban/kanban-table.scss
@@ -419,6 +419,7 @@ body {
     }
 
     .kanban-table-header {
+        flex-basis: 2.25rem;
         min-height: 2.25rem;
         position: sticky;
         top: 0;
